CLO-27180 - Review and remove --add-opens and --add-exports
- all places have new unified setup
- documentation updated